P2 part 1: bootstrap, plot, and 95% CI for log of betas

--- a/homework6.Rmd
+++ b/homework6.Rmd
@@ -88,3 +88,58 @@ pivot_longer(
 ```
 
 ##### The best model appears to be model 3 (head circumference, length, sex, and all interactions), and the worst is mine (only including variables available prior to birth).
+
+### Problem 2
+```{r read and tidy data p2, message=FALSE}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(id, USW00094728 = "CentralPark_NY"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) %>%
+  select(name, id, everything())
+```
+
+```{r, bootstrapping and log betas plot}
+set.seed(17)
+weather_df %>% 
+  modelr::bootstrap(n = 5000) %>% 
+  mutate(models = map(strap, ~ lm(tmax ~ tmin, data = .x)),
+    results = map(models, broom::tidy)) %>% 
+  select(results) %>% 
+  unnest(results) %>% 
+select(term, estimate) %>% 
+  pivot_wider(names_from = term, values_from = estimate) %>% 
+  janitor::clean_names() %>%
+  unnest() %>% 
+mutate(log_betas = log10(intercept*tmin)) %>% 
+    ggplot(aes(x = log_betas)) + geom_density() + labs(x = "Log(Beta0*Beta1)", y = "Density")
+```
+
+##### The distribution is skewed slightly to the left, but appears relatively normal.
+
+
+
+```{r, 95ci betas, warning = FALSE, message = FALSE}
+weather_df %>% 
+  modelr::bootstrap(n = 5000) %>% 
+  mutate(models = map(strap, ~ lm(tmax ~ tmin, data = .x)),
+    results = map(models, broom::tidy)) %>% 
+  select(results) %>% 
+  unnest(results) %>% 
+select(term, estimate) %>% 
+  pivot_wider(
+names_from = term, values_from = estimate) %>% 
+  unnest() %>% 
+  janitor::clean_names() %>% 
+mutate(log_betas = log10(intercept*tmin)) %>% 
+summarize(
+lower_CI = quantile(log_betas, c(.025)),
+upper_CI = quantile(log_betas, c(.975))) %>% 
+  knitr::kable(digits = 4)
+```
+
